# cmake_study

./: CMakeLists.txt  main.c
show/: CMakeLists.txt  show.c  show.h
